Refactor: routes and add Mapper